causing data change actually happened, but on all Mesh instances, which caused unnecessary high load on the elasticsearch. This has been fixed with a workaround.

icon:check[] Core: When deleting old versions of nodes, the related binaries were not deleted from the disk. This has been fixed now. Credits to [kdima001](https://github.com/kdima001).

[[v1.7.18]]
== 1.7.18 (23.09.2021)

icon:check[] Server: Mesh will now create a file `mesh.live` and touch it every 10 seconds as long as the instance is considered live. If an OutOfMemory is caught or one
of the plugins (permanently) fails to initialize, mesh is considered no longer live and the file will not be touched any more.

icon:check[] Server: The readiness probe will now also check the status of the local OrientDB storage. A mesh instance will only be considered "ready" if the local OrientDB storage is "ONLINE".

icon:check[] GraphQL: The `wait` parameter will now only wait for elasticsearch to be ready when a `query` option in `nodes` is actively used.
Previously it would wait for elasticsearch even if it wasn't needed.

[[v1.7.17]]
== 1.7.17 (22.09.2021)

icon:check[] Clustering: When recovering from a split-brain situation, the topology lock (which was raised, because nodes rejoined the cluster)
was not always removed. This has been fixed, and some info log about the reason for the topology lock has been added.

[[v1.7.16]]
== 1.7.16 (26.08.2021)

icon:check[] Core: The included Mesh UI has been updated to version `1.3.0`, containing the stability improvements, as well as the new feature of the node status (draft/updated/published/archived etc) filtering.

[[v1.7.15]]
== 1.7.15 (19.08.2021)

icon:check[] Clustering: The high level changelog system has been extended to allow for specific changes to be executed in cluster mode.

[[v1.7.14]]
== 1.7.14 (10.08.2021)

icon:check[] Core: A bug preventing the string schema field restrictions from being cleared, has been fixed.

[[v1.7.13]]
== 1.7.13 (21.06.2021)
